fix: footer being too high on planning page

--- a/app/planner/page.module.css
+++ b/app/planner/page.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  height: 100vh;
+  height: auto;
   padding-top: 100px;
 }
 
